[package]
name = "project_g"
version = "0.1.0"
authors = ["walt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.23.0"
vulkano-shaders = "0.23.0"
vulkano-win = "0.23.0"
winit = "0.24"
shaderc-sys = "0.7.2"
cgmath = "0.18"
tobj = "3.0.0"
png = "0.16"